# cmake-lib

./: CMakeCache.txt  CMakeLists.txt
include/: foo.h
src/: foo.cpp
